--- a/package.json
+++ b/package.json
@@ -30,5 +30,14 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
     "vite": "^5.3.1"
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "postcss.config.js",
+  "keywords": [],
+  "author": "princesaini00",
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "WeatherApp-React"
   }
 }
